# django-dataclass-forms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tasks.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yml
django_dataclass_form/: __init__.py  form.py
django_dataclass_forms/: form.py
tests/: settings.py  test_form.py
