[tool.poetry]
name = "django-dataclass-forms"
version = "0.1.0"
description = ""
authors = ["Simon Kelly <simongdkelly@gmail.com>"]
readme = "README.md"
packages = [{include = "django_dataclass_forms"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
invoke = "^2.2.0"
ruff = "^0.1.5"
pytest-django = "^4.7.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ds=tests.settings --strict-markers --tb=short"
django_find_project = false
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".* build dist venv node_modules compose assets cypress static"
pythonpath = ["."]

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    'migrations'
]

line-length = 120
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "DJ", "PT"]
ignore = ["PT019"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.extend-per-file-ignores]
"settings_production.py" = ["F405"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py{38,39,310,311}-django{32}
    py{38,39,310,311}-django{40}
    py{38,39,310,311,312,313}-django{41,42}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
deps =
    pytest
    pytest-django
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
commands = pytest {posargs}
"""
